# aiagent

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: audit.yml  ci.yml
docs/: USER_MANUAL.md
src/aiagent/: __init__.py  config.py  exceptions.py
src/aiagent/builtin_skills/: __init__.py
src/aiagent/builtin_skills/chat/: SKILL.md  skill.py
src/aiagent/builtin_skills/extract/: SKILL.md  devset.jsonl  skill.py  trainset.jsonl
src/aiagent/builtin_skills/sentiment/: SKILL.md  skill.py
src/aiagent/cli/: __init__.py  _common.py  _runtime.py  _verbosity.py  app.py  chat.py  chat_session.py  config_cmd.py  doctor.py  eval_cmd.py  models.py  optimize_cmd.py  repl.py  run.py  sentiment.py  shell.py  skills_cmd.py
src/aiagent/core/: __init__.py  evaluate.py  extract.py  pipeline.py  segment.py  sentiment.py  sentiment_stats.py
src/aiagent/data/: __init__.py  loader.py
src/aiagent/ingest/: __init__.py  extract_text.py  fetch.py  sources.py
src/aiagent/llm/: __init__.py  lm.py  registry.py  retry_lm.py
src/aiagent/metrics/: __init__.py  extraction.py
src/aiagent/optimize/: __init__.py  harness.py
src/aiagent/skills/: __init__.py  base.py  discovery.py  loader.py  registry.py  router.py
tests/: conftest.py  test_chat_session.py  test_cli.py  test_cli_llm.py  test_cli_misc.py  test_cli_net.py  test_cli_sentiment.py  test_config.py  test_ingest.py  test_live_devai.py  test_lm_runtime.py  test_loader.py  test_metrics.py  test_optimize.py  test_registry.py  test_repl.py  test_retry_lm.py  test_sentiment_stats.py  test_skills.py
tools/package/: build-binary.sh  startup.sh.in  verify-versions.py
tools/release/: release.sh
