[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiagent"
version = "0.2.0"
description = "Programmatic DSPy agent framework: query optimization, goal-reaching loops, and autonomous data processing over local LLMs"
readme = "README.md"
# Supported-version floor (package metadata). The exact build / dev / CI
# interpreter is pinned once in .python-version; keep the minor in sync.
# ruff (target-version) and mypy (python_version) are intentionally left unset
# so they derive from this floor / the running interpreter.
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Kresimir Sparavec", email = "ksparavec@devitops.com" },
]
maintainers = [
    { name = "Kresimir Sparavec", email = "ksparavec@devitops.com" },
]
keywords = ["dspy", "llm", "agent", "optimization", "ollama", "vllm", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = [
    "dspy==3.2.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # Typer and Click must sit on the same side of Click 8.2's
    # `Parameter.make_metavar(ctx)` break: a pre-8.2 Typer overrides make_metavar
    # with the old (no-ctx) signature and crashes any usage/help render on a
    # command with a positional argument. Typer >= 0.16 is ctx-aware (its
    # make_metavar accepts ctx), so pin both to the 8.2 era to bar an
    # incompatible pair (see issue #1).
    "typer>=0.16",
    # click is used directly (click.echo / click.exceptions.*) in cli/app.py.
    "click>=8.2",
    "pyyaml>=6.0",
    # httpx powers the doctor/models probes; also a dspy transitive dep, but we
    # use it directly so declare it explicitly.
    "httpx>=0.27",
    # pypdf extracts text from PDF sources for the `sentiment` skill. Pure Python
    # (no C build), so it stays inside the torch-free packaging guards.
    "pypdf>=5",
    # litellm is a dspy transitive dep, but RetryAwareLM references its exception
    # classes directly (status-aware retry, issue #10), so declare it explicitly.
    # Floor matches dspy's own requirement.
    "litellm>=1.64.0",
]

[project.urls]
Homepage = "https://github.com/devitops-com/aiagent"
Repository = "https://github.com/devitops-com/aiagent"
Issues = "https://github.com/devitops-com/aiagent/issues"
Changelog = "https://github.com/devitops-com/aiagent/blob/main/CHANGELOG.md"

[project.scripts]
aiagent = "aiagent.cli.app:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
    "bandit",
    "hypothesis>=6",
    "types-PyYAML",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aiagent"]
# Belt-and-suspenders: guarantee non-.py skill data ships in the wheel (these
# are tracked, so hatchling includes them by default; listed here so a future
# broad exclude can't silently drop the skills' SKILL.md / datasets).
artifacts = [
    "src/aiagent/builtin_skills/**/SKILL.md",
    "src/aiagent/builtin_skills/**/*.jsonl",
]

[tool.hatch.build.targets.wheel.force-include]
"src/aiagent/py.typed" = "aiagent/py.typed"

[tool.hatch.build.targets.sdist]
include = [
    "src/aiagent",
    "tools",
    "tests",
    "Makefile",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Keep the default suite hermetic; the live devai integration tests opt in via
# `pytest -m live` (they need a reachable devai-router).
addopts = '--tb=short -q -m "not live"'
filterwarnings = [
    "ignore::ResourceWarning",
    # dspy emits this at import time from its own optimizer modules.
    "ignore:The 'prefix' argument in InputField/OutputField is deprecated:DeprecationWarning",
]
markers = [
    "live: tests that require a reachable devai-router (skipped by default)",
]

[tool.coverage.run]
branch = true
source = ["aiagent"]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.mypy]
# python_version intentionally unset — mypy follows the running interpreter
# (the .venv, pinned via .python-version).
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["aiagent"]
mypy_path = "src"
# Built-in skills are exec-loaded plugin files (same-named skill.py in sibling
# dirs without __init__.py); they're runtime-tested via the skills engine, not
# part of the type-checked API surface.
exclude = ["src/aiagent/builtin_skills/"]

# dspy ships no py.typed / stubs; don't fail strict mode on its untyped surface.
[[tool.mypy.overrides]]
module = ["dspy", "dspy.*"]
ignore_missing_imports = true

# pypdf is imported lazily inside ingest.extract_text; tolerate stub variance
# across pinned versions.
[[tool.mypy.overrides]]
module = ["pypdf", "pypdf.*"]
ignore_missing_imports = true

# litellm's partial typing doesn't re-export its exception classes; treat it as
# untyped (RetryAwareLM keys on its exception types + HTTP status codes).
[[tool.mypy.overrides]]
module = ["litellm"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.ruff]
src = ["src", "tests"]
# target-version intentionally unset — ruff infers it from requires-python.

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# Test files may carry long fixture strings and echo schema field names.
"tests/**" = ["E501", "N802"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
# B101 (assert_used): asserts document internal invariants the type checker
# can't prove; never reached on user input (validation rejects bad data first).
skips = ["B101"]
